Test cases updated