@@ -13,11 +13,21 @@
 	<artifactId>kernel-fsadapter-hdfs</artifactId>
 	<version>1.0.6</version>
     <properties>
-    <kernel.core.version>1.0.6</kernel.core.version>
+    	<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.version>3.7.0</maven.compiler.version>
+    	<kernel.core.version>1.0.6</kernel.core.version>
 		<kernel.auth-adapter.version>1.0.6</kernel.auth-adapter.version>
 		<kernel.applicant-type.version>1.0.6</kernel.applicant-type.version>
 		 <kernel.dataaccess-hibernate.version>1.0.6</kernel.dataaccess-hibernate.version>
 		<kernel.logger.version>1.0.6</kernel.logger.version>
+		<hadoop-client>2.8.1</hadoop-client>
+		<junit.version>4.12</junit.version>
+		<mockito.version>1.10.19</mockito.version>
+		<powermock.version>1.7.4</powermock.version>
+		<powermock.beta.version>2.0.0-beta.5</powermock.beta.version>
+		<java.version>1.8</java.version>	
+		<maven.surefire.plugin.version>2.9</maven.surefire.plugin.version>	
     </properties> 
 	<dependencies>
 		<dependency>
@@ -44,24 +54,16 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.mockito/mockito-core -->
-		<dependency>
-		    <groupId>org.mockito</groupId>
-		    <artifactId>mockito-core</artifactId>
-		    <version>2.28.1</version>
-		    <scope>test</scope>
-		</dependency>
-		
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-module-junit4</artifactId>
-			<version>2.0.2</version>
+			<version>${powermock.beta.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.powermock</groupId>
 			<artifactId>powermock-api-mockito2</artifactId>
-			<version>2.0.7</version>
+			<version>${powermock.beta.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -71,16 +73,38 @@
 		</dependency>
 	</dependencies>
 	<build>
-		<plugins>			
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${maven.surefire.plugin.version}</version>
-				<configuration>
-					<argLine>
-						--add-opens java.base/jdk.internal.loader=ALL-UNNAMED --illegal-access=permit
-					</argLine>
-				</configuration>
-			</plugin>
-		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>${maven.compiler.version}</version>
+					<configuration>
+						<source>${maven.compiler.source}</source>
+						<target>${maven.compiler.target}</target>
+					</configuration>
+				</plugin>
+				<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-toolchains-plugin</artifactId>
+			    <version>3.0.0</version>
+			    <executions>
+			      <execution>
+			        <goals>
+			          <goal>toolchain</goal>
+			        </goals>
+			      </execution>
+			    </executions>
+			    <configuration>
+			      <toolchains>
+			        <jdk>
+			          <version>1.8</version>
+			          <vendor>sun</vendor>
+			        </jdk>
+			      </toolchains>
+			    </configuration>
+			  </plugin>			
+			</plugins>
+		</pluginManagement>
 	</build>
 </project>
